[gd_scene load_steps=35 format=3 uid="uid://65i3770f51i5"]

[ext_resource type="FontFile" uid="uid://dvsuh4jsu5je8" path="res://fonts/Comic-Art.ttf" id="1_k2h5i"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_uktc2"]
[ext_resource type="Shader" path="res://shaders/bg_scroll.gdshader" id="2_iuv42"]
[ext_resource type="StyleBox" uid="uid://dfb6gt5bcj7nb" path="res://themes/line_edit_box.tres" id="3_6ixp5"]
[ext_resource type="Texture2D" uid="uid://lsp2q70qn50x" path="res://assets/BG_pattern.png" id="3_gog6b"]
[ext_resource type="Theme" uid="uid://mvl84bj3gtux" path="res://themes/button_text.tres" id="4_wa3g3"]
[ext_resource type="StyleBox" uid="uid://1doepnnx6ujk" path="res://themes/button_box.tres" id="5_b5ipr"]
[ext_resource type="Theme" uid="uid://uwvcsl3220tw" path="res://themes/label_text.tres" id="6_2y4gm"]
[ext_resource type="PackedScene" uid="uid://dks26u15bojov" path="res://scenes/hud.tscn" id="6_fd74w"]
[ext_resource type="StyleBox" uid="uid://oxywqliom21b" path="res://themes/label_box.tres" id="7_c7dwp"]
[ext_resource type="PackedScene" uid="uid://cuvbeu4gfc0d0" path="res://scenes/cenario_guarda.tscn" id="9_6mpf6"]
[ext_resource type="PackedScene" uid="uid://thgtinhfcopk" path="res://scenes/imagem_camera.tscn" id="11_q3ont"]
[ext_resource type="AudioStream" uid="uid://cerh5pq143o45" path="res://sfx/point_sfx1.mp3" id="13_nwvon"]
[ext_resource type="AudioStream" uid="uid://dcxx405il1vpa" path="res://sfx/point_sfx2.mp3" id="14_ns1gl"]
[ext_resource type="AudioStream" uid="uid://doqr4ln63nx21" path="res://sfx/point_sfx3.mp3" id="15_25duh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4rl18"]
shader = ExtResource("2_iuv42")
shader_parameter/speed = 0.1

[sub_resource type="Theme" id="Theme_cmfbi"]
LineEdit/colors/font_color = Color(1, 1, 1, 1)
LineEdit/colors/font_outline_color = Color(0, 0, 0, 1)
LineEdit/constants/outline_size = 12
LineEdit/font_sizes/font_size = 64
LineEdit/fonts/font = ExtResource("1_k2h5i")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4lce8"]
bg_color = Color(0.442911, 0.442911, 0.442911, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.0962049, 0.0962047, 0.0962047, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0.0962049, 0.0962047, 0.0962047, 1)
shadow_size = 1
shadow_offset = Vector2(1, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5j8lc"]
bg_color = Color(0.601223, 0.601223, 0.601223, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.0962049, 0.0962047, 0.0962047, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0.0962049, 0.0962047, 0.0962047, 1)
shadow_size = 1
shadow_offset = Vector2(1, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iij2i"]
bg_color = Color(0.442911, 0.442911, 0.442911, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.0962049, 0.0962047, 0.0962047, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0.0962049, 0.0962047, 0.0962047, 1)
shadow_size = 1
shadow_offset = Vector2(1, 5)

[sub_resource type="Theme" id="Theme_di2mx"]
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/colors/font_shadow_color = Color(0, 0, 0, 1)
Label/constants/outline_size = 9
Label/constants/shadow_offset_x = 0
Label/constants/shadow_offset_y = 0
Label/font_sizes/font_size = 24
Label/fonts/font = ExtResource("1_k2h5i")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6wxoq"]
bg_color = Color(0, 0, 0, 0.352941)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 0.752941)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 10.0
expand_margin_top = 3.0
expand_margin_right = 10.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e17tu"]
content_margin_left = 8.0
content_margin_top = 5.0
content_margin_right = 10.0
content_margin_bottom = 5.0
bg_color = Color(0.306923, 0.306923, 0.306923, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.0962049, 0.0962047, 0.0962047, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0, 0, 0, 0.368627)

[sub_resource type="Theme" id="Theme_id22t"]
RichTextLabel/colors/font_outline_color = Color(0, 0, 0, 1)
RichTextLabel/constants/outline_size = 10
RichTextLabel/font_sizes/normal_font_size = 26
RichTextLabel/fonts/normal_font = ExtResource("1_k2h5i")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2j74m"]
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_right = 10.0
bg_color = Color(0.306923, 0.306923, 0.306923, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.0962049, 0.0962047, 0.0962047, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0.0962049, 0.0962047, 0.0962047, 1)
shadow_size = 1
shadow_offset = Vector2(1, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_llt6m"]
bg_color = Color(0.35907, 0.359069, 0.359069, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.0962049, 0.0962047, 0.0962047, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0.0962049, 0.0962047, 0.0962047, 1)
shadow_size = 1
shadow_offset = Vector2(1, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ivi63"]
bg_color = Color(0.489622, 0.489622, 0.489622, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.0962049, 0.0962047, 0.0962047, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0.0962049, 0.0962047, 0.0962047, 1)
shadow_size = 1
shadow_offset = Vector2(1, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sxmwe"]
bg_color = Color(0.435193, 0.435192, 0.435192, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.0962049, 0.0962047, 0.0962047, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0.0962049, 0.0962047, 0.0962047, 1)
shadow_size = 1
shadow_offset = Vector2(1, 5)

[sub_resource type="Theme" id="Theme_sdjic"]
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_shadow_color = Color(0, 0, 0, 1)
Label/constants/shadow_offset_x = 3
Label/constants/shadow_offset_y = 3
Label/font_sizes/font_size = 48
Label/fonts/font = ExtResource("1_k2h5i")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_d0yu6"]
streams_count = 3
stream_0/stream = ExtResource("13_nwvon")
stream_0/weight = 1.0
stream_1/stream = ExtResource("14_ns1gl")
stream_1/weight = 1.0
stream_2/stream = ExtResource("15_25duh")
stream_2/weight = 1.0

[sub_resource type="Animation" id="Animation_0nc6t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("jogo/label_pontuacao_aumentou:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("jogo/label_pontuacao_aumentou:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("jogo/Control/container_jogo/label_dica:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("point_sfx:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_tdnt7"]
resource_name = "mostrar_dica"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("jogo/Control/container_jogo/label_dica:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_n6cns"]
resource_name = "pontuacao_aumentou"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("jogo/label_pontuacao_aumentou:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.35, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0, 1, 0, 1), Color(0, 1, 0, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("jogo/label_pontuacao_aumentou:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("point_sfx:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qxoya"]
_data = {
"RESET": SubResource("Animation_0nc6t"),
"mostrar_dica": SubResource("Animation_tdnt7"),
"pontuacao_aumentou": SubResource("Animation_n6cns")
}

[node name="main" type="Node2D"]
script = ExtResource("1_uktc2")

[node name="jogo" type="CanvasLayer" parent="."]
layer = -1

[node name="BG" type="ColorRect" parent="jogo"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.701961, 0.74902, 0.698039, 1)

[node name="BG_pattern" type="TextureRect" parent="jogo"]
modulate = Color(0.623529, 0.670588, 0.619608, 0.803922)
texture_repeat = 2
material = SubResource("ShaderMaterial_4rl18")
offset_right = 1153.0
offset_bottom = 648.0
texture = ExtResource("3_gog6b")
stretch_mode = 1

[node name="Control" type="Control" parent="jogo"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="container_jogo" type="VBoxContainer" parent="jogo/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -313.5
offset_top = -224.0
offset_right = 313.5
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSeparator" type="HSeparator" parent="jogo/Control/container_jogo"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="jogo/Control/container_jogo"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="letra_enviada" type="LineEdit" parent="jogo/Control/container_jogo/HBoxContainer" groups=["letra_enviada"]]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme = SubResource("Theme_cmfbi")
theme_override_styles/normal = ExtResource("3_6ixp5")
alignment = 1
max_length = 1
caret_blink = true

[node name="VSeparator" type="VSeparator" parent="jogo/Control/container_jogo/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="botao_enviar" type="Button" parent="jogo/Control/container_jogo/HBoxContainer" groups=["botao_enviar"]]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("4_wa3g3")
theme_override_styles/normal = ExtResource("5_b5ipr")
theme_override_styles/hover = SubResource("StyleBoxFlat_4lce8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5j8lc")
theme_override_styles/focus = SubResource("StyleBoxFlat_iij2i")
text = "Enviar"

[node name="HSeparator3" type="HSeparator" parent="jogo/Control/container_jogo"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 70)
layout_mode = 2

[node name="label_dica" type="Label" parent="jogo/Control/container_jogo" groups=["dica"]]
visible = false
custom_minimum_size = Vector2(500, 10)
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_di2mx")
theme_override_styles/normal = SubResource("StyleBoxFlat_6wxoq")
text = "Dica:  Um imposto em que cada contribuinte, seja ele pessoa física ou jurídica, paga uma certa porcentagem do que recebe ao governo."
horizontal_alignment = 3
vertical_alignment = 1
autowrap_mode = 3
visible_characters = 0
visible_characters_behavior = 3
visible_ratio = 0.0

[node name="HSeparator2" type="HSeparator" parent="jogo/Control/container_jogo"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="container_letras_vazias" type="HBoxContainer" parent="jogo/Control/container_jogo"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 17

[node name="container_letras_usadas" type="HBoxContainer" parent="jogo/Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -36.5
offset_right = 194.0
offset_bottom = 36.5
grow_vertical = 2

[node name="VSeparator" type="VSeparator" parent="jogo/Control/container_letras_usadas"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="jogo/Control/container_letras_usadas"]
layout_mode = 2
size_flags_horizontal = 4

[node name="HSeparator" type="HSeparator" parent="jogo/Control/container_letras_usadas/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="Label" type="Label" parent="jogo/Control/container_letras_usadas/VBoxContainer"]
layout_mode = 2
theme = ExtResource("6_2y4gm")
theme_override_styles/normal = SubResource("StyleBoxFlat_e17tu")
text = "Letras Usadas: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="label_letras_usadas" type="RichTextLabel" parent="jogo/Control/container_letras_usadas/VBoxContainer"]
custom_minimum_size = Vector2(165, 50)
layout_mode = 2
theme = SubResource("Theme_id22t")
theme_override_styles/normal = ExtResource("7_c7dwp")
fit_content = true
scroll_active = false

[node name="botao_voltar" type="Button" parent="jogo/Control"]
layout_mode = 0
offset_left = 14.0
offset_top = 586.0
offset_right = 109.0
offset_bottom = 626.0
theme = ExtResource("4_wa3g3")
theme_override_styles/normal = SubResource("StyleBoxFlat_2j74m")
theme_override_styles/hover = SubResource("StyleBoxFlat_llt6m")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ivi63")
theme_override_styles/focus = SubResource("StyleBoxFlat_sxmwe")
text = "Voltar"

[node name="label_pontuacao_aumentou" type="Label" parent="jogo"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 850.0
offset_top = 439.0
offset_right = 1019.0
offset_bottom = 486.0
pivot_offset = Vector2(85, 25)
theme = SubResource("Theme_sdjic")
text = "+150"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HUD" parent="." groups=["hud"] instance=ExtResource("6_fd74w")]

[node name="imagem_camera" parent="." instance=ExtResource("11_q3ont")]
position = Vector2(143, 262)

[node name="cenario_guarda" parent="." instance=ExtResource("9_6mpf6")]
visible = false
modulate = Color(1, 1, 1, 0)

[node name="point_sfx" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_d0yu6")
volume_db = -10.0
pitch_scale = 1.5

[node name="animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qxoya")
}

[connection signal="text_change_rejected" from="jogo/Control/container_jogo/HBoxContainer/letra_enviada" to="." method="_on_letra_enviada_text_change_rejected"]
[connection signal="text_changed" from="jogo/Control/container_jogo/HBoxContainer/letra_enviada" to="." method="_on_letra_enviada_text_changed"]
[connection signal="text_submitted" from="jogo/Control/container_jogo/HBoxContainer/letra_enviada" to="." method="_on_letra_enviada_text_submitted"]
[connection signal="pressed" from="jogo/Control/container_jogo/HBoxContainer/botao_enviar" to="." method="_on_botao_enviar_pressed"]
[connection signal="pressed" from="jogo/Control/botao_voltar" to="." method="_on_botao_voltar_pressed"]
